Add dotenv-rails and configure DATABASE_URL

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,4 +19,5 @@ production:
   database: my_portfolio_production
   username: my_portfolio
   password: <%= ENV['MY_PORTFOLIO_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
 
