--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 RAILS_MASTER_KEY=render_master_key_will_go_here
-PY_API_URL=https://flask-api-url.onrender.com
+PY_API_URL=https://python-portfolio-r1d0.onrender.com
