--- a/config/database.yml
+++ b/config/database.yml
@@ -1,14 +1,37 @@
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+#   host: localhost
+#   username: postgres
+#   password: CeetheDev
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+# development:
+#   <<: *default
+#   database: my_portfolio_development
+
+# test:
+#   <<: *default
+#   database: my_portfolio_test
+
+# production:
+#   <<: *default
+#   database: my_portfolio_production
+#   username: my_portfolio
+#   password: <%= ENV['MY_PORTFOLIO_DATABASE_PASSWORD'] %>
+#   url: <%= ENV['DATABASE_URL'] %>
+
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
-  username: postgres
-  password: CeetheDev
+  host: <%= ENV.fetch("DATABASE_HOST", "localhost") %>
+  username: <%= ENV.fetch("DATABASE_USER", "postgres") %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD", "CeetheDev") %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: my_portfolio_development
+  database: <%= ENV.fetch("DATABASE_NAME", "my_portfolio_development") %>
 
 test:
   <<: *default
@@ -17,7 +40,6 @@ test:
 production:
   <<: *default
   database: my_portfolio_production
-  username: my_portfolio
-  password: <%= ENV['MY_PORTFOLIO_DATABASE_PASSWORD'] %>
+  username: <%= ENV.fetch("MY_PORTFOLIO_DATABASE_USER", "my_portfolio") %>
+  password: <%= ENV.fetch("MY_PORTFOLIO_DATABASE_PASSWORD") %>
   url: <%= ENV['DATABASE_URL'] %>
-
