--- a/config/database.yml
+++ b/config/database.yml
@@ -43,6 +43,7 @@ production:
   username: <%= ENV.fetch("MY_PORTFOLIO_DATABASE_USER", "my_portfolio") %>
   password: <%= ENV.fetch("MY_PORTFOLIO_DATABASE_PASSWORD") %>
   url: <%= ENV['DATABASE_URL'] %>
+  host: <%= ENV["POSTGRES_HOST"] %>
 
 cable:
   <<: *production
