--- a/config/database.yml
+++ b/config/database.yml
@@ -24,26 +24,19 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: <%= ENV.fetch("DATABASE_HOST", "localhost") %>
-  username: <%= ENV.fetch("DATABASE_USER", "postgres") %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD", "CeetheDev") %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: <%= ENV.fetch("DATABASE_NAME", "my_portfolio_development") %>
+  database: my_portfolio_development
 
 test:
   <<: *default
   database: my_portfolio_test
 
 production:
-  <<: *default
-  database: my_portfolio_production
-  username: <%= ENV.fetch("MY_PORTFOLIO_DATABASE_USER", "my_portfolio") %>
-  password: <%= ENV.fetch("MY_PORTFOLIO_DATABASE_PASSWORD") %>
-  url: <%= ENV['DATABASE_URL'] %>
-  host: <%= ENV["POSTGRES_HOST"] %>
+  url: <%= ENV["DATABASE_URL"] %>
 
 cable:
-  <<: *production
+  adapter: postgresql
+  url: <%= ENV["DATABASE_URL"] %>
