--- a/config/database.yml
+++ b/config/database.yml
@@ -37,7 +37,7 @@ test:
   <<: *default
   database: my_portfolio_test
 
-production:
+production: &production
   <<: *default
   url: <%= ENV['DATABASE_URL'] %>
 
