--- a/config/database.yml
+++ b/config/database.yml
@@ -47,3 +47,7 @@ cable:
 queue:
   <<: *default
   url: <%= ENV['SOLID_QUEUE_DATABASE_URL'] %>
+
+cache:
+  <<: *default
+  url: <%= ENV['SOLID_CACHE_DATABASE_URL'] %>
